Bug 471434 - Colorscheme previews do not show the right colors
Summary: Colorscheme previews do not show the right colors
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-06-25 14:30 UTC by Ismael Asensio
Modified: 2023-06-30 21:15 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
kcm_colors previews (117.54 KB, image/png)
2023-06-25 14:30 UTC, Ismael Asensio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ismael Asensio 2023-06-25 14:30:38 UTC
Created attachment 159891 [details]
kcm_colors previews

SUMMARY
The previews on the KCM do not show the right colors for the previewed colorscheme, but those of the currently used one.
Only the window title roles seem to pick the right colors.

STEPS TO REPRODUCE
1. systemsettings kcm_colors
2. Choose different color schemes and apply

OBSERVED RESULT
The previews on the KCM do not show the right colors for the previewed color scheme

EXPECTED RESULT
All of the roles shown for each preview match the corresponding color scheme

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 23.04
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.5.1
Kernel Version: 6.2.0-23-generic (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620
Manufacturer: LG Electronics
Product Name: 15Z990-V.AA78B
System Version: 0.1
Comment 1 Justin Zobel 2023-06-29 04:23:28 UTC
Can confirm, the breeze dark one is especially notable as all parts of the window should be dark.
Comment 2 Bug Janitor Service 2023-06-30 08:34:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3037
Comment 3 David Redondo 2023-06-30 21:15:18 UTC
Git commit 14bb6df73f094b4f45ce3e5f1a03738e81471c5d by David Redondo.
Committed on 30/06/2023 at 13:42.
Pushed by davidre into branch 'master'.

kcms/colors: Provide QPalette colors via an extension type

In Qt5 passing a QPalette to QML was working automagically but
this is no longer the case. Provide properties for all the colors
via an extension type.

M  +35   -0    kcms/colors/colors.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/14bb6df73f094b4f45ce3e5f1a03738e81471c5d