kcms/colors: Provide QPalette colors via an extension type

In Qt5 passing a QPalette to QML was working automagically but
this is no longer the case. Provide properties for all the colors
via an extension type.
BUG:471434